--- a/config/locales/po/nl/api.po
+++ b/config/locales/po/nl/api.po
@@ -31,7 +31,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-08 15:10+0000\n"
+"PO-Revision-Date: 2014-05-27 10:32+0000\n"
 "Last-Translator: PetraSnoek <lievepetra@gmail.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/yv-backend/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -43,7 +43,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 10:26+0000\n"
+"PO-Revision-Date: 2014-05-27 10:27+0000\n"
 "Last-Translator: PetraSnoek <lievepetra@gmail.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/yv-backend/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -101,10 +101,10 @@ msgid "moment.bible.download.self.title"
 msgstr "Je hebt de <b>{version}</b> versie gedownload."
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} heeft een leesplan gestart"
+msgstr "{name} is een leesplan begonnen"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Is een leesplan gestart"
+msgstr "Jij bent een leesplan begonnen"
 
 msgid "moment.plan_segment_completion.title"
 msgstr "{name} voltooide dag <b>{segment}</b> van leesplan, <b>{title}</b>"
@@ -119,7 +119,7 @@ msgid "moment.plan_completion.title"
 msgstr "{name} heeft een leesplan voltooid"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Voltooide een leesplan"
+msgstr "Jij  voltooide jouw leesplan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} heeft de medaille <b>{title}</b> verdiend"
@@ -132,6 +132,9 @@ msgstr "{name} heeft <b>{title}</b> bekeken"
 
 msgid "moment.video.watched.self.title"
 msgstr "Je hebt <b>{title}</b> bekeken"
+
+msgid "moment.system.find_friends.title"
+msgstr "De Bijbel App is nog mooier met vrienden. Doorzoek jouw contacten om vrienden te vinden."
 
 msgid "notifications.friendships.offer"
 msgstr "{name} wil je vriend worden op YouVersion"
@@ -239,10 +242,10 @@ msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} heeft een notitie toegevoegd"
 
 msgid "notifications.moments.create.plan_subscription"
-msgstr "{name} heeft een nieuw leesplan gestart, {title}"
+msgstr "{name} is een nieuw leesplan begonnen, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
-msgstr "{name} heeft een nieuw Bijbel-leesplan gestart, {title}"
+msgstr "{name} is een nieuw Bijbel-leesplan begonnen, {title}"
 
 msgid "notifications.moments.create.plan_completion"
 msgstr "{name} heeft zijn/haar leesplan afgerond, {title}"
