--- a/config/locales/po/mn/api.po
+++ b/config/locales/po/mn/api.po
@@ -32,8 +32,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-04 11:00+0000\n"
-"Last-Translator: chris ballinger <ballinger.chris@gmail.com>\n"
+"PO-Revision-Date: 2014-05-29 11:13+0000\n"
+"Last-Translator: tugsuu <zagdaa_tugsuu@yahoo.com>\n"
 "Language-Team: Mongolian (http://www.transifex.com/projects/p/yv-backend/language/mn/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -72,46 +72,46 @@ msgid "moment.system.bible_series_promo.body"
 msgstr "<i>Библийн Олон Ангит Цуврал Кино</i> үзээрэй!"
 
 msgid "moment.bookmark.title"
-msgstr "{name} хавчуурга хийсэн <b>{reference_human}</b>"
+msgstr "{name} <b>{reference_human}</b> хавчуурга хийсэн"
 
 msgid "moment.bookmark.self.title"
-msgstr "Та хавчуурга хийсэн <b>{reference_human}</b>"
+msgstr "Та <b>{reference_human}</b> хавчуурга хийсэн"
 
 msgid "moment.friendship.title"
-msgstr "{user_name} -тай холбогдсон <b>{friend_name}</b>"
+msgstr "{user_name} <b>{friend_name}</b> -тай холбогдсон "
 
 msgid "moment.friendship.self.title"
 msgstr "Та <b>{friend_name}</b> -тай холбогдсон"
 
 msgid "moment.highlight.title"
-msgstr "{name} тодруулсан <b>{reference_human}</b>"
+msgstr "{name} <b>{reference_human}</b> тодруулсан "
 
 msgid "moment.highlight.self.title"
 msgstr "Та <b>{reference_human}</b> д тодруулга хийсэн байна"
 
 msgid "moment.note.title"
-msgstr "{name} тэмдэглэл нэмсэн, <b>{title}</b>"
+msgstr "{name} <b>{title}</b> гэдэг тэмдэглэл нэмсэн"
 
 msgid "moment.note.self.title"
-msgstr "Та шинэ тэмдэглэл нэмсэн байна, <b>{title}</b>"
+msgstr "Та <b>{title}</b> гэдэг тэмдэглэл нэмсэн"
 
 msgid "moment.bible.download.title"
-msgstr "{name} хувилбарыг татаж авсан, <b>{version}</b>"
+msgstr "{name} <b>{version}</b> хувилбар татаж авсан"
 
 msgid "moment.bible.download.self.title"
-msgstr "Таны татаж авсан хувилбар, <b>{version}</b>"
+msgstr "Та <b>{version}</b> хувилбар татаж авсан"
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} тѳлѳвлѳгѳѳ эхлсэн"
+msgstr "{name} шинэ тѳлѳвлѳгѳѳ эхлэсэн"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Тѳлѳвлѳгѳѳг эхлсэн"
+msgstr "Та Шинэ Тѳлѳвлѳгѳѳ эхлэсэн"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} дуусгасан өдөр <b>{segment}</b> төлөвлөгөөний, <b>{title}</b>"
+msgstr "{name} <b>{title}</b> гэдэг төлөвлөгөөний <b>{segment}</b> өдрийг дуусгасан  "
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "Таны дуусгасан өдөр <b>{segment}</b> төлөвлөгөөний, <b>{title}</b>"
+msgstr "Та <b>{title}</b> гэдэг төлөвлөгөөний <b>{segment}</b> өдөр дуусгасан  "
 
 msgid "moment.plan_segment_completion.body"
 msgstr "Ѳдѳр {segment} -с {total_segments} ({percent_complete}%)"
@@ -120,19 +120,22 @@ msgid "moment.plan_completion.title"
 msgstr "{name} төлөвлөгөөг дуусгасан"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Tөлөвлөгөөг дуусгасан"
+msgstr "Таэхлэсэн уншлагын Tөлөвлөгөөгөө дуусгасан"
 
 msgid "moment.badge.earned.title"
-msgstr "{name} хүртсэн <b>{title}</b> цол тэмдэг"
+msgstr "{name} <b>{title}</b> цол тэмдэг хүртсэн"
 
 msgid "moment.badge.earned.self.title"
-msgstr "Та хүртсэн байна <b>{title}</b> цол тэмдэг"
+msgstr "Та <b>{title}</b> цол тэмдэг хүртсэн"
 
 msgid "moment.video.watched.title"
-msgstr "{name} үзсэн <b>{title}</b>"
+msgstr "{name} <b>{title}</b> үзсэн"
 
 msgid "moment.video.watched.self.title"
-msgstr "Та үзсэн байна <b>{title}</b>"
+msgstr "Та <b>{title}</b> үзсэн"
+
+msgid "moment.system.find_friends.title"
+msgstr "Библи Аппыг найзуудтайгаа үзвэл хамаагүй дээр. Харилцагчидаасаа Найз болох хүмүүсээ хайж ол."
 
 msgid "notifications.friendships.offer"
 msgstr "{name} YouVersion-д тантай найз болохыг хүсч байна"
