--- a/config/locales/po/ms/api.po
+++ b/config/locales/po/ms/api.po
@@ -26,7 +26,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-07 14:50+0000\n"
+"PO-Revision-Date: 2014-05-28 14:22+0000\n"
 "Last-Translator: Charlotte Billy <charlottebilly_92@hotmail.com>\n"
 "Language-Team: Malay (http://www.transifex.com/projects/p/yv-backend/language/ms/)\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-28 16:33+0000\n"
+"PO-Revision-Date: 2014-05-28 14:33+0000\n"
 "Last-Translator: Charlotte Billy <charlottebilly_92@hotmail.com>\n"
 "Language-Team: Malay (http://www.transifex.com/projects/p/yv-backend/language/ms/)\n"
 "MIME-Version: 1.0\n"
@@ -128,6 +128,9 @@ msgstr "{name} telah menonton <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Anda telah menonton <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "App Alkitab adalah lebih baik bersama Sahabat. Cari Contact anda untuk menemukan Sahabat."
+
 msgid "notifications.friendships.offer"
 msgstr "{name} ingin menjadi sahabat anda di YouVersion"
 
@@ -146,6 +149,15 @@ msgstr "{name} komen pada bookmark anda: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} komen pada highlight anda: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} komen pada Pelan anda: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} komen pada Pelan Alkitab anda: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} komen pada persahabatan baru anda dengan {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} komen pada nota anda: “{comment}”"
 
@@ -154,6 +166,15 @@ msgstr "{name} suka bookmark anda, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} suka highlight anda, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} suka aktiviti Pelan anda"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} suka aktiviti Pelan Alkitab anda"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} suka persahabatan baru anda dengan {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} suka nota anda dalam {reference_human}"
@@ -170,11 +191,29 @@ msgstr "{moment_owner_name} juga komen pada bookmark mereka: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} juga komen pada bookmark {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} juga komen pada persahabatan baru mereka dengan {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} juga komen pada persahabatan baru {moment_owner_name} dengan {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} juga komen pada highlight mereka: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} juga komen pada highlight {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} juga komen pada Pelan mereka: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} juga komen pada Pelan {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} juga komen pada Pelan Alkitab mereka: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} juga komen pada Pelan Alkitab {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} juga komen pada nota mereka: “{comment}”"
@@ -196,6 +235,18 @@ msgstr "{name} menambah nota, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} menambah nota"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} telah memulakan Pelan yang baru, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} telah memulakan Pelan Alkitab yang baru, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} telah melengkapkan Pelan mereka, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} telah melengkapkan Pelan Alkitab mereka, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
