--- a/config/locales/po/zh_CN/api.po
+++ b/config/locales/po/zh_CN/api.po
@@ -38,8 +38,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-21 04:11+0000\n"
-"Last-Translator: Joe Jiang <lamp.purl@gmail.com>\n"
+"PO-Revision-Date: 2014-05-28 13:56+0000\n"
+"Last-Translator: Gladys Liew <gladysliew@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +50,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 00:06+0000\n"
-"Last-Translator: Joe Jiang <lamp.purl@gmail.com>\n"
+"PO-Revision-Date: 2014-05-28 13:57+0000\n"
+"Last-Translator: Gladys Liew <gladysliew@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -141,7 +141,7 @@ msgid "moment.video.watched.self.title"
 msgstr "你观看了 <b>{title}</b>"
 
 msgid "moment.system.find_friends.title"
-msgstr "圣经 App 现在与朋友一起使用更有效。请您在联系人中发现朋友，一起开始美好体验。"
+msgstr "与朋友一起使用圣经软件会给您更佳体验。请在您的联系人中搜索朋友。"
 
 msgid "notifications.friendships.offer"
 msgstr "{name} 希望成为你在 YouVersion 的好友"
@@ -168,7 +168,7 @@ msgid "notifications.comments.moment.mine.plan_activity.push"
 msgstr "{name} 评论了您的读经计划: “{comment}”"
 
 msgid "notifications.comments.moment.mine.friendship"
-msgstr "{name} 对于您和 {friend_name} 新建立的友谊进行了评论: “{comment}”"
+msgstr "{name} 评论了您的新联系 {friend_name} : “{comment}”"
 
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} 评论了笔记: “{comment}”"
@@ -180,13 +180,13 @@ msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} 喜欢您高亮显示的经文 {reference_human}"
 
 msgid "notifications.likes.moment.mine.plan_activity"
-msgstr "{name} 赞了您读经计划的行动"
+msgstr "{name} 赞了您读经计划的活动"
 
 msgid "notifications.likes.moment.mine.plan_activity.push"
-msgstr "{name} 赞了您读经计划的行动"
+msgstr "{name} 赞了您读经计划的活动"
 
 msgid "notifications.likes.moment.mine.friendship"
-msgstr "{name} 赞了您和 {friend_name} 的新友谊"
+msgstr "{name} 赞了您的新联系 {friend_name} "
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} 喜欢您的关于 {reference_human}的笔记"
@@ -204,10 +204,10 @@ msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} 也评论了 {moment_owner_name} 的书签标记: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.friendship"
-msgstr "{moment_owner_name} 也评论了和 {friend_name} 新建立的友谊: “{comment}”"
+msgstr "{moment_owner_name} 也评论了他的新联系 {friend_name} : “{comment}”"
 
 msgid "notifications.comments.moments.friend.friendship"
-msgstr "{commenter_name} 也评论了 {moment_owner_name} 和 {friend_name} 的新友谊: “{comment}”"
+msgstr "{commenter_name} 也评论了 {moment_owner_name} 的新联系 {friend_name} : “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} 也评论了他们的高亮标记: “{comment}”"
@@ -216,13 +216,13 @@ msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} 也评论了 {moment_owner_name} 的高亮标记: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity"
-msgstr "{moment_owner_name} 也评论了他们的计划: “{comment}”"
+msgstr "{moment_owner_name} 也评论了他的计划: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity"
 msgstr "{commenter_name} 也评论了 {moment_owner_name} 的计划: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity.push"
-msgstr "{moment_owner_name} 也评论了他们的计划: “{comment}”"
+msgstr "{moment_owner_name} 也评论了他的读经计划: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity.push"
 msgstr "{commenter_name} 也评论了 {moment_owner_name} 的读经计划: “{comment}”"
@@ -255,10 +255,10 @@ msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} 开始了一个新的读经计划, {title}"
 
 msgid "notifications.moments.create.plan_completion"
-msgstr "{name} 结束了他们的新计划, {title}"
+msgstr "{name} 结束了他的计划, {title}"
 
 msgid "notifications.moments.create.plan_completion.push"
-msgstr "{name} 结束了他们的读经计划, {title}"
+msgstr "{name} 结束了他的读经计划, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
