--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -466,6 +466,7 @@ en:
     edit connections:                           "Connected Accounts"
     edit devices:                               "Connected Devices"
     vod_subscriptions:                          "Verse of the Day Subscriptions"
+    vod_subscription success:                   "You have successfully updated your Verse of the Day subscription!"
     daily email delivery:                       "Daily email delivery"
     time:                                       "Time"
     daily push notifications:                   "Daily push notifications for mobile apps"
