--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -281,6 +281,7 @@ en:
       edit highlight title:                     "Edit this highlight"
       edit bookmark title:                      "Edit this bookmark"
       edit note title:                          "Edit this note"
+      edit subscription:                        "Edit subscription"
       delete:                                   "Delete"
       delete confirm:                           "Are you sure?"
       delete highlight title:                   "Delete this highlight"
